--- a/routes/Departamento/Adm/view-membros-adm.html
+++ b/routes/Departamento/Adm/view-membros-adm.html
@@ -107,12 +107,31 @@
                         <table class="table table-light-blue">
                             <thead>
                                 <tr>
-                                    <th scope="col">Nome<img src="/img/arrow-down-blue-.png" alt=""> 
+                                    <th scope="col">Nome
+                                        <span class="select-style"> <select> 
+                                            <option value="'">A</option> 
+                                            <option value="'">B</option>    
+                                            <option value="'">C</option> 
+                                            <option value="'">D</option>    
+                                            <option value="'">E</option>     
+                                        </select></span>    
                                     </th>
                                     <th scope="col">Departamento 
-                                        <img src="/img/arrow-down-blue-.png" alt="">                                           
+                                        <span class="select-style"> <select> 
+                                            <option value="'">A</option> 
+                                            <option value="'">B</option>    
+                                            <option value="'">C</option> 
+                                            <option value="'">D</option>    
+                                            <option value="'">E</option>     
+                                        </select></span>                                         
                                     </th>
-                                    <th scope="col">Nível <img src="/img/arrow-down-blue-.png" alt=""> 
+                                    <th scope="col">Nível  <span class="select-style"> <select> 
+                                        <option value="'">A</option> 
+                                        <option value="'">B</option>    
+                                        <option value="'">C</option> 
+                                        <option value="'">D</option>    
+                                        <option value="'">E</option>     
+                                    </select></span>    
                                         </th>
                                 </tr>
                             </thead>
