--- a/routes/Departamento/gestores/view-membros-gestor.html
+++ b/routes/Departamento/gestores/view-membros-gestor.html
@@ -46,10 +46,10 @@
 
         <div class="row">
             <div class="col">
-                <header >
-                    <div class="pt-4">
+                <header class="d-flex justify-content-betweent pb-4" >
+                    <div class="pt-4 pb-4" >
                         <h3>Membros</h3>
-                        <p>Nessa aba é possível acompanhar e adicionar novos membros ao seu departamento. 
+                        <p class="subtitulo">Nessa aba é possível <b>acompanhar e adicionar</b> colaboradores ao seu setor.
                         </p>
                     </div>
 
@@ -80,14 +80,14 @@
                         <div class="suspenso">
                             <ul>
                                 <a href="view-membros-colaboradores.html" class="aba-atual"><li>Membros</li></a>
-                                <a href="v-setores-gestor-colaboradores.html"><li>Setores</li></a>
+                                <a href="view-setores-gestor.html"><li>Setores</li></a>
                             </ul>
                         </div>
                     </div>
 
                     <div>
                         <div class="box-menu">
-                            <button id="btn-cta-blue" onclick="">Nova Solicitação <img src="/img/add_24px.png" alt=""></button>
+                            <button id="btn-cta-blue" onclick=""> <a href="Add/add-membro.html">Nova Solicitação <img src="/img/add_24px.png" alt=""></a> </button>
                         </div>
                     </div>
                 </div>
@@ -105,9 +105,9 @@
                 </div>
 
 
-                <div class="row">
+                <div class="row px-5">
                     <div class="col bg-table px-5">
-                        <table class="table table-light-blue">
+                        <table class="table table-light-blue ">
                             <thead>
                                 <tr>
                                     <th scope="col">Nome<img src="/img/arrow-down-blue-.png" alt=""> 
