--- a/routes/Detalhes-da-Chamada/historico-view.html
+++ b/routes/Detalhes-da-Chamada/historico-view.html
@@ -56,7 +56,7 @@
                     
                     <div class="d-flex flex-row align-middle justify-content-right">
                         <div class="pt-4">
-                            <button class="status"> <div class="tag-dark-gray"></div> Finalizado</button>
+                            <button class="status"> <div class="tag-dark-gray"></div> Resolvido</button>
                             <p class="history-status pt-1">Ter, 17 de maio às 9:46 am.</p>
                         </div>
                         
