--- a/routes/index-recebidos.html
+++ b/routes/index-recebidos.html
@@ -125,12 +125,48 @@
                         <table class="table table-light-green">
                             <thead>
                                 <tr>
-                                    <th scope="col">Título <img src="/img/Arrow-down.png" alt=""> </th>
-                                    <th scope="col">Solicitante <img src="/img/Arrow-down.png" alt=""></th>
-                                    <th scope="col">Setor <img src="/img/Arrow-down.png" alt=""></th>
-                                    <th scope="col">Data <img src="/img/Arrow-down.png" alt=""></th>
-                                    <th scope="col">Status <img src="/img/Arrow-down.png" alt=""></th>
-                                    <th scope="col">Prioridade <img src="/img/Arrow-down.png" alt=""></th>
+                                    <th scope="col">Título  <span class="select-style-green"> <select> 
+                                        <option value="'">A</option> 
+                                        <option value="'">B</option>    
+                                        <option value="'">C</option> 
+                                        <option value="'">D</option>    
+                                        <option value="'">E</option>     
+                                    </select></span> </th>
+                                    <th scope="col">Solicitante  <span class="select-style-green"> <select> 
+                                        <option value="'">A</option> 
+                                        <option value="'">B</option>    
+                                        <option value="'">C</option> 
+                                        <option value="'">D</option>    
+                                        <option value="'">E</option>     
+                                    </select></span> </th>
+                                    <th scope="col">Setor  <span class="select-style-green"> <select> 
+                                        <option value="'">A</option> 
+                                        <option value="'">B</option>    
+                                        <option value="'">C</option> 
+                                        <option value="'">D</option>    
+                                        <option value="'">E</option>     
+                                    </select></span> </th>
+                                    <th scope="col">Data  <span class="select-style-green"> <select> 
+                                        <option value="'">A</option> 
+                                        <option value="'">B</option>    
+                                        <option value="'">C</option> 
+                                        <option value="'">D</option>    
+                                        <option value="'">E</option>     
+                                    </select></span> </th>
+                                    <th scope="col">Status  <span class="select-style-green"> <select> 
+                                        <option value="'">A</option> 
+                                        <option value="'">B</option>    
+                                        <option value="'">C</option> 
+                                        <option value="'">D</option>    
+                                        <option value="'">E</option>     
+                                    </select></span> </th>
+                                    <th scope="col">Prioridade  <span class="select-style-green"> <select> 
+                                        <option value="'">A</option> 
+                                        <option value="'">B</option>    
+                                        <option value="'">C</option> 
+                                        <option value="'">D</option>    
+                                        <option value="'">E</option>     
+                                    </select></span> </th>
                                 </tr>
                             </thead>
                             <tbody>
